avaliacao/environment/devops/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: museum
spec:
  gateways:
  - istio-autogenerated-k8s-ingress.istio-system.svc.cluster.local
  hosts:
  - senaicharts.agile-devops.club
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: chartmuseum-chartmuseum 
        port:
          number: 8080
